# ai-video-summarizer

ai-video-summarizer/: .gitignore  .replit  app.py  main.py  models.py  pyproject.toml  replit.md  replit_auth.py  routes.py
ai-video-summarizer/.local/state/memory/: persisted_information.md
ai-video-summarizer/Ai-VideoSummarizer/: .replit  README.md  app.py  pyproject.toml
ai-video-summarizer/Ai-VideoSummarizer/ai-video-summarizer/: .replit  pyproject.toml  replit.md
ai-video-summarizer/Ai-VideoSummarizer/ai-video-summarizer/attached_assets/: Pasted-Design-a-modern-interactive-web-application-for-an-AI-V_1765767027757.txt
ai-video-summarizer/Ai-VideoSummarizer/ai-video-summarizer/backend/: app.py  requirements.txt
ai-video-summarizer/Ai-VideoSummarizer/ai-video-summarizer/cpp-modules/: text_analyzer.cpp
ai-video-summarizer/Ai-VideoSummarizer/ai-video-summarizer/frontend/: script.js  styles.css
ai-video-summarizer/Ai-VideoSummarizer/attached_assets/: Pasted-YE-HE-LEKIN-ESME-KUCH-ERRRORS-HE-KUCH-KAME-HE-ABB-BHE-B_1765771854401.txt
ai-video-summarizer/Ai-VideoSummarizer/backend/: app.py
ai-video-summarizer/Ai-VideoSummarizer/backend/services/: quiz_generator.py  summary_generator.py  video_processor.py
ai-video-summarizer/Ai-VideoSummarizer/backend/templates/: index.html
ai-video-summarizer/Ai-VideoSummarizer/frontend/: api.php  index.html
ai-video-summarizer/Ai-VideoSummarizer/java-backend/: VideoProcessor.java
ai-video-summarizer/Ai-VideoSummarizer/templates/: index.html
ai-video-summarizer/services/: chatbot.py  pdf_generator.py  quiz_generator.py  summary_generator.py  video_processor.py
ai-video-summarizer/static/css/: styles.css
ai-video-summarizer/static/js/: app.js  landing.js
ai-video-summarizer/templates/: app.html  error.html  home.html  landing.html
(+8 files in other folders)
