[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.2",
    "flask-cors>=6.0.2",
    "gunicorn>=23.0.0",
    "nltk>=3.9.2",
    "openai>=2.11.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "yt-dlp>=2025.12.8",
]
